--- a/app/src/main/res/layout/item_video_play.xml
+++ b/app/src/main/res/layout/item_video_play.xml
@@ -21,6 +21,15 @@
         android:layout_height="match_parent"
         android:scaleType="centerCrop"/>
 
+    <!-- 双击点赞动画层 -->
+    <com.example.tiltok_xsb.ui.view.LikeAnimationView
+        android:id="@+id/like_animation_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="90dp"
+        android:layout_marginBottom="110dp"
+        android:layout_marginTop="60dp"/>
+
     <!-- 加载中 -->
     <ProgressBar
         android:id="@+id/progress_bar"
@@ -79,7 +88,7 @@
 
             <!--点赞动画-->
             <com.airbnb.lottie.LottieAnimationView
-                android:id="@+id/like_animationView"
+                android:id="@+id/like_animationView_small"
                 android:layout_width="85dp"
                 android:layout_height="85dp"
                 />
@@ -123,7 +132,7 @@
             android:textSize="32sp"
             android:textColor="@color/white"
             android:layout_marginTop="12dp"
-            android:text="@string/icon_more"/>
+            android:text="@string/icon_collect"/>
 
         <!--收藏数-->
         <TextView
@@ -143,7 +152,7 @@
             android:textSize="32sp"
             android:textColor="@color/white"
             android:layout_marginTop="12dp"
-            android:text="@string/icon_more"/>
+            android:text="@string/icon_share"/>
 
         <!--分享数量-->
         <TextView
