--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -49,7 +50,7 @@
             android:id="@+id/iv_play"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@mipmap/ic_play"
+            android:src="@mipmap/ic_pause"
             android:layout_centerInParent="true"
             android:visibility="gone"/>
 
