--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,8 @@
     <color name="color_bg_theme">#161924</color>
     <color name="black">#000000</color>
     <color name="white">#fff</color>
-    <color name="red">#F40707</color>
+    <color name="red">#FE2C55</color>
+    <color name="yellow">#FFCC00</color>
     <color name="transparent">#00000000</color>
     <color name="color_FF0041">#ff2c54</color>
     <color name="color_tag">#9B9B9B</color>
