--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,10 +5,13 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="color_bg_theme">#161924</color>
+
     <color name="black">#000000</color>
     <color name="white">#fff</color>
     <color name="red">#FE2C55</color>
     <color name="yellow">#FFCC00</color>
+    <color name="gray">#9B9B9B</color>
+
     <color name="transparent">#00000000</color>
     <color name="color_FF0041">#ff2c54</color>
     <color name="color_tag">#9B9B9B</color>
