修改评论数问题，顶部bar改为2个

--- a/app/src/main/res/layout/dialog_comment.xml
+++ b/app/src/main/res/layout/dialog_comment.xml
@@ -27,19 +27,9 @@
             android:layout_centerInParent="true"/>
     </RelativeLayout>
 
-    <!-- 评论列表 -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:clipToPadding="false"
-        android:paddingTop="8dp"
-        android:paddingBottom="70dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="70dp"/>
-
     <!-- 输入框区域 -->
     <LinearLayout
+        android:id="@+id/layout_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -76,6 +66,17 @@
             android:layout_marginLeft="8dp"/>
     </LinearLayout>
 
-
+    <!-- 评论列表 -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:paddingTop="8dp"
+        android:paddingBottom="70dp"
+        android:layout_marginTop="40dp"
+        android:layout_marginBottom="70dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
