改用ExoPlayer播放器，实现转场动画

--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
         <variable
@@ -30,14 +29,6 @@
             android:padding="10dp"
             android:contentDescription="返回"/>
 
-        <!-- 视频封面 -->
-        <ImageView
-            android:id="@+id/iv_cover"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:visibility="gone"/>
-
         <!-- ViewPager2 用于滑动切换视频 -->
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/view_pager"
@@ -45,14 +36,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical"/>
 
-        <!-- 播放按钮（暂停时显示） -->
-        <ImageView
-            android:id="@+id/iv_play"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@mipmap/ic_pause"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
 
     </RelativeLayout>
 </layout>
