--- a/app/src/main/res/layout/item_video_play.xml
+++ b/app/src/main/res/layout/item_video_play.xml
@@ -9,24 +9,29 @@
     android:background="@color/black">
 
     <!-- 视频播放器 -->
-    <VideoView
-        android:id="@+id/video_view"
+    <androidx.media3.ui.PlayerView
+        android:id="@+id/player_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:resize_mode="fit"
+        app:show_buffering="when_playing"
+        app:use_controller="false"
+        app:surface_type="surface_view"/>
 
     <!-- 封面图（加载中显示） -->
     <ImageView
         android:id="@+id/iv_cover"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop"
+        android:transitionName="shared_cover"/>
 
     <!-- 双击点赞动画层 -->
     <com.example.tiltok_xsb.ui.view.LikeAnimationView
         android:id="@+id/like_animation_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="60dp"
+        android:layout_marginEnd="60dp"
         android:layout_marginBottom="110dp"
         android:layout_marginTop="60dp"/>
 
@@ -54,7 +59,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:gravity="center_horizontal"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true">
 
         <!--头像-->
