--- a/app/src/main/res/layout/item_gridvideo.xml
+++ b/app/src/main/res/layout/item_gridvideo.xml
@@ -2,7 +2,6 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -25,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/tv_content"
-            tools:text="111111111111111111111111111111111111111111111111111111111111111111111"
+            tools:text="视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容视频内容"
             android:textColor="@color/white"
             android:textSize="14sp"
             android:maxLines="2"
