--- a/app/src/main/res/layout/activity_video_play.xml
+++ b/app/src/main/res/layout/activity_video_play.xml
@@ -1,41 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/black">
 
-    <data>
-        <variable
-            name="viewModel"
-            type="com.example.tiltok_xsb.ui.viewmodel.VideoPlayViewModel" />
-    </data>
+    <!-- 下拉刷新提示 -->
+    <TextView
+        android:id="@+id/tv_refresh_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="下拉刷新"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:padding="16dp"
+        android:alpha="0"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-
-
-    <RelativeLayout
-        android:id="@+id/rl_container"
+    <!-- ViewPager2 用于滑动切换视频 -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/black">
+        android:orientation="vertical"/>
 
-        <!-- 返回 -->
-        <ImageView
-            android:id="@+id/iv_back"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="45dp"
-            android:src="@mipmap/iv_back"
-            android:padding="10dp"
-            android:contentDescription="返回"/>
+    <!-- 上拉加载提示 -->
+    <TextView
+        android:id="@+id/tv_load_more_hint"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="上拉加载更多"
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        android:padding="16dp"
+        android:alpha="0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- ViewPager2 用于滑动切换视频 -->
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"/>
+    <!-- 返回 -->
+    <ImageView
+        android:id="@+id/iv_back"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:src="@mipmap/iv_back"
+        android:padding="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="16dp" />
 
+</androidx.constraintlayout.widget.ConstraintLayout>
 
-    </RelativeLayout>
-</layout>
