--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -5,49 +5,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black"
     tools:context=".ui.fragment.MainFragment">
 
     <androidx.viewpager2.widget.ViewPager2
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/viewPager"
-        android:layout_marginTop="78dp"
+        android:layout_marginTop="48dp"
         android:layout_marginBottom="48dp"/>
 
     <RelativeLayout
         android:id="@+id/rl_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
         android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/iv_list"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
-            android:background="@mipmap/iv_list"
-            android:layout_centerVertical="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"/>
-
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabTitle"
-            android:layout_width="match_parent"
-            android:layout_height="44dp"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"
-            app:tabIndicatorColor="@color/white"
-            app:tabTextColor="#999999"
-            app:tabSelectedTextColor="@color/black"
-            app:tabSelectedTextAppearance="@style/TabTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="45dp"
+            android:layout_centerInParent="true"
+            android:background="@color/transparent"
+            app:tabIndicatorColor="#FF9F00"
+            app:tabIndicatorHeight="3dp"
+            app:tabIndicatorFullWidth="false"
+            app:tabSelectedTextColor="@color/white"
+            app:tabTextColor="#CCCCCC"
+            app:tabTextAppearance="@style/TabTextStyle"
+            app:tabMode="auto"
+            app:tabGravity="center"
+            app:tabRippleColor="@android:color/transparent"
             app:tabIndicatorGravity="bottom"
-            app:tabPadding="0dp"
-            app:tabPaddingEnd="0dp"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabMaxWidth="0dp"
-            />
+            app:tabMinWidth="60dp"
+            app:tabPaddingStart="20dp"
+            app:tabPaddingEnd="20dp"/>
 
         <ImageView
             android:id="@+id/iv_search"
@@ -57,6 +49,7 @@
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"/>
+
     </RelativeLayout>
 
     <RelativeLayout
