--- a/app/src/main/res/layout/item_grid_video.xml
+++ b/app/src/main/res/layout/item_grid_video.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:adjustViewBounds="true"
     android:layout_margin="1dp"
     android:background="#1A1A1A">
 
